# python_project_template

./: .env  .gitignore  .pylintrc  Makefile  pyproject.toml
.github/workflows/: code_checkers.yml
requirements/: dev.txt  requirements-dev.txt
tests/: __init__.py
